apps/saleor-dashboard/overlays/prod/patches/replicas-patch.yaml
# Replicas Patch - Dashboard PROD
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 3
